--- a/package.json
+++ b/package.json
@@ -23,6 +23,13 @@
     "@types/react-dom": "^18.0.11",
     "typescript": "^4.9.5"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "scrape-recipes": "node scripts/scrapeRecipes.js"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
